# praxis

./: .dockerignore  .gitignore  .npmrc  AGENTS.md  OBJECTIVE.md  PR.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
.codex/: auth.json  config.toml  history.jsonl  version.json
.github/workflows/: ci.yml
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
apps/cli/: README.md  main.py  pyproject.toml
apps/cli/src/praxis_cli/: __init__.py  cli.py  config.py  events.py  queue.py  telemetry.py
apps/cli/src/praxis_cli/api/: app.py
apps/cli/src/praxis_cli/mocks/: database.py  llm.py  orchestrator.py
apps/cli/tests/integration/: test_cli_to_mocks_roundtrip.py
apps/cli/tests/unit/: test_cli_args.py
apps/example-app/: README.md  package.json
docs/: workspace.md
python/harness/: pyproject.toml
python/harness/tests/e2e/: test_concurrent_sessions.py  test_telemetry_spans.py  test_tool_feedback_flow.py
python/harness/tests/e2e/fixtures/: concurrent_sessions.json  tool_feedback_flow.json
python/harness/tests/e2e/utils/: mock_llm.py  session_bus.py  telemetry.py
python/harness/tests/unit/: test_dependency_manifest.py  test_env_bootstrap.py
rules/: CONSTITUTION.md  OBJECTIVE.md  PLAN_OVERVIEW.md  TESTING.md
scripts/: bootstrap.workspace.sh  test.e2e.mock.sh  test.unit.sh
sdk/contracts/: acp.openapi.yaml  agent-io.schema.json  types.ts
sdk/example-sdk/: README.md  package.json
specs/001-cli-env-setup/: data-model.md  plan.md  quickstart.md  research.md  (+2 more)
(+21 files in other folders)
