[project]
name = "praxis-harness"
version = "0.1.0"
description = "Mock E2E harness for Praxis"
authors = [{ name = "Praxis" }]
requires-python = ">=3.11,<3.12"
dependencies = [
  "pytest==9.0.0",
  "anyio==4.11.0",
  "opentelemetry-sdk==1.38.0",
  "rich==14.2.0"
]

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "-q"
